--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  device_preview: ^1.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,8 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons
-    - assets/images
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -79,9 +80,9 @@ flutter:
   fonts:
     - family: PPTelegraf
       fonts:
-        - asset: fonts/pp/PPTelegraf-Regular.otf
-        # - asset: fonts/Schyler-Italic.ttf
-          # style: italic
+        - asset: assets/fonts/pp/PPTelegraf-Regular.otf
+        - asset: assets/fonts/pp/PPTelegraf-UltraBold.otf
+          weight: 900
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
